...
            android:name="comp3350.grs.presentation.TopBar"
            android:id="@+id/post_page_top_bar"
            tools:layout="@layout/fragment_top_bar"
            android:layout_marginBottom="5dp"
            ></fragment>
        <ScrollView
                android:id="@+id/post_page_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/post_page_top_bar"
                android:layout_above="@id/write_reply_button"
                >
            <LinearLayout
...
                            android:background="@drawable/bottom_border">

                        <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/user"
                                android:layout_toLeftOf="@id/post_page_post_user"

                                ></ImageView>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="userID"
                                android:textSize="20dp"
                                android:id="@+id/post_page_post_user"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="10dp"
                                ></TextView>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="Title"
                                android:textSize="30dp"
                                android:textStyle="bold"
                                android:id="@+id/post_page_post_title"
                                ></TextView>
                    </RelativeLayout>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Your group will be implementing a complete, self-contained Java Android application. The software will include a graphical user interface, a database for storage, and some data processing.It must execute on aproperly-configuredWindows systemand on a Nexus 7 tablet;support for any other platforms is optional. A sample project and architecture will be given;
                            android:textSize="25dp"
                            android:id="@+id/post_page_post_content"
                            ></TextView>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/post_page_reply_wrapper"
...
        </ScrollView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/less_rounded_rectangle"
                android:text="Write Reply"
                android:textSize="40dp"
                android:gravity="center"
                android:id="@+id/write_reply_button"
                ></TextView>
    <LinearLayout
            android:id="@+id/write_reply_wrapper"
...
            >
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:background="@drawable/bottom_border"
                android:hint="Content"
                android:id="@+id/post_page_reply_content"
                ></EditText>


    </LinearLayout>

...
