<resources>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SIGNUP</string>
    <string name="continueAsGuest">CONTINUE AS GUEST</string>
    <string name="alreadyHaveAcc">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="welcomeJoin">Welcome to join us!</string>
    <string name="confirmSignup">confirm and login</string>
    <string name="welcome">Welcome!</string>

    //For Registration and browse games by hasin

...
