<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ForumPage"
        android:background="@color/blue2"
        android:orientation="vertical"
        >
    <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="comp3350.grs.presentation.TopBar"
            tools:layout="@layout/fragment_top_bar"
            android:id="@+id/forum_page_top_bar"
            android:layout_marginBottom="5dp"
            ></fragment>
    <ScrollView
            android:id="@+id/forum_page_post_scroll_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forum_page_top_bar"
            android:layout_above="@id/write_post_button"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forum_page_post_wrapper"
                android:orientation="vertical"
                android:padding="5dp"
                >

        </LinearLayout>
    </ScrollView>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:background="@drawable/less_rounded_rectangle"
            android:text="Write Post"
            android:textSize="40dp"
            android:id="@+id/write_post_button"
            ></TextView>
    <LinearLayout
            android:id="@+id/write_post_wrapper"
            android:layout_above="@id/write_post_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp"
            android:visibility="gone"
        >
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35dp"
                android:background="@drawable/bottom_border"
                android:hint="Title"
                android:id="@+id/post_title"
                ></EditText>
        <EditText
                android:id="@+id/post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:background="@drawable/bottom_border"
                android:hint="content"
                android:gravity="top"
                ></EditText>

    </LinearLayout>
</RelativeLayout>